welcome.lessons.welcome.array.array667.Array667.scala.error
array667:3: error: not found: value numslength
	for (k<-0 to numslength){
                     ^